2019-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add keyboard shortcuts for RPN stack manipulation
	* Add button for calculation of RPN stack total
	* Add context menu to RPN stack
	* Use RPN stack for values in insert function dialog and add "Apply to Stack" button

2019-09-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add RPN negate button with Ctrl+'-' shortcut
	* Negate on subtract button right-click
	* RPN "LAST x" button (for retrieval of the top stack value before the last operation)

2019-09-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when saving mode/settings (on exit) if history is empty

2019-09-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "calculate as you type" result to history after idle time (1.5 s)

2019-09-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to move selected history items to top

2019-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to automatically calculate the current expression on each change (as you type)

2019-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support "where" syntax in continious display of parsed expression

2019-08-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* RPN stack drag and drop

2019-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Man page

2019-07-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to delete selected history items
	* Fix segfault with command line expression

2019-07-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use typed expression on history insert/copy
	* Add insert parsed text menu item, and include both typed and parsed text for full text copy

2019-07-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Hide "Abbreviate Names" in popup menu when appropriate and add separator
	* Show custom base result popup menu item

2019-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve subscripting of suffixes in history
