@@ -1,3 +1,7 @@
+2019-10-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Improved RPN support for history actions
+
 2019-09-30 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add keyboard shortcuts for RPN stack manipulation
